# Rust_Messaging_Server_Client

./: DB.txt  README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
