[package]
name = "client"
version = "0.1.0"
edition = "2018"
authors=["henri500, CelineK","ZNAIBER"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes="0.7.5"
rand = "0.8.4"
rand_core = "0.6.3"
hex="0.4.3"
block-modes="0.8.1"
hex-literal = "0.3.4"